--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,8 @@
+/* purgecss start ignore */
+body {
+  @apply text-gray-900;
+}
+
 .bg-gradient-green-blue {
   background-image: linear-gradient(
     99deg,
@@ -5,3 +10,4 @@
     hsl(177, 52.1%, 45.9%) 56%
   );
 }
+/* purgecss end ignore */
