--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -1,6 +1,7 @@
 /* purgecss start ignore */
 .markdown-body {
-  @apply text-lg;
+  @apply text-xl;
+  @apply tracking-tight;
 }
 
 .markdown-body a {
@@ -11,9 +12,9 @@
 }
 
 .markdown-body p {
-  @apply leading-loose;
+  @apply leading-normal;
   @apply mb-4;
-  @apply text-lg;
+  @apply text-xl;
 }
 
 .markdown-body h2 {
@@ -32,7 +33,7 @@
 
 .markdown-body ul,
 ol {
-  @apply leading-loose;
+  @apply leading-normal;
   @apply pl-8;
   list-style: initial;
 }
