--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -18,6 +18,7 @@
 }
 
 .markdown-body h2 {
+  @apply tracking-tight;
   @apply font-black;
   @apply mb-2;
   @apply mt-8;
@@ -25,6 +26,7 @@
 }
 
 .markdown-body h3 {
+  @apply tracking-tight;
   @apply font-black;
   @apply mb-2;
   @apply mt-8;
