Use Dracula code syntax theme

--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -49,7 +49,7 @@ ol {
 
 .markdown-body :not(pre) code {
   font-size: 0.8em;
-  @apply bg-light;
+  @apply bg-gray-200;
   @apply px-2;
   @apply py-1;
   @apply whitespace-pre-wrap;
