Move code out of /src and use Tailwind's built-in purge option

--- a/css/prism.css
+++ b/css/prism.css
@@ -84,7 +84,7 @@ pre[class*="language-"] {
   background: rgba(40, 41, 54, 1) !important;
   border-radius: 0.5em;
   padding: 1em;
-  margin: 0.5em 0;
+  @apply mb-6;
   overflow: auto;
   height: auto;
 }
