--- a/css/prism.css
+++ b/css/prism.css
@@ -82,9 +82,9 @@ code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
   background: rgba(40, 41, 54, 1) !important;
-  border-radius: 0.5em;
   padding: 1em;
   @apply mb-6;
+  @apply rounded-md;
   overflow: auto;
   height: auto;
 }
